--- a/packages/handlebars-ng.knappi.org/src/components/GithubActionsBadge.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/GithubActionsBadge.astro
@@ -1,7 +1,9 @@
 ---
 import { githubUrl } from "@/constants";
 
-const badgeUrl = `${githubUrl}/actions/workflows/default.yml/badge.svg`
-
+const badgeUrl = `${githubUrl}/actions/workflows/default.yml/badge.svg`;
 ---
-<a href="https://github.com/nknapp/handlebars-ng/actions"><img src={badgeUrl} alt="Github Actions Badge"/></a>
+
+<a href="https://github.com/nknapp/handlebars-ng/actions"
+  ><img src={badgeUrl} alt="Github Actions Badge" /></a
+>
