--- a/packages/handlebars-ng.knappi.org/src/pages/index.astro
+++ b/packages/handlebars-ng.knappi.org/src/pages/index.astro
@@ -11,8 +11,8 @@ import Home from "@/layouts/Home.astro";
       header="Language Specification"
       action={{ label: "To the specification", href: "/spec/" }}
     >
-      We build a spec for the Handlebars language. It's test-cases can be
-      used in many programming languages.
+      We build a spec for the Handlebars language. It's test-cases can be used
+      in many programming languages.
     </Card>
     <Card
       header="Performance"
