--- a/packages/handlebars-ng.knappi.org/src/components/Testcase/Ast.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/Testcase/Ast.astro
@@ -4,10 +4,11 @@ import prettier from "prettier";
 import { Code } from "astro/components";
 
 export interface Props {
-  ast: Record<never, unknown>
+  ast: Record<never, unknown>;
 }
 
-const {ast} = Astro.props
+const { ast } = Astro.props;
 const prettyAst = prettier.format(JSON.stringify(ast), { parser: "json" });
 ---
+
 <Code code={prettyAst} lang={"json"} />
