--- a/packages/handlebars-ng.knappi.org/src/components/sidebar/TocHeader.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/sidebar/TocHeader.astro
@@ -6,8 +6,10 @@ export interface Props {
 
 const { href, text } = Astro.props;
 
-const active = href != null && Astro.url.pathname.startsWith(href)
-const activeClass = active ? "font-bold" : ""
+const active = href != null && Astro.url.pathname.startsWith(href);
+const activeClass = active ? "font-bold" : "";
 ---
 
-<header class={"text-lg mb-2 mt-6 first:mt-0 "+ activeClass}><a class="text-black underline" href={href}>{text}</a></header>
+<header class={"text-lg mb-2 mt-6 first:mt-0 " + activeClass}>
+  <a class="text-black underline" href={href}>{text}</a>
+</header>
