fix slugs and header links, add helper definitions

--- a/packages/handlebars-ng.knappi.org/src/components/Testcase/ParseErrorTest.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/Testcase/ParseErrorTest.astro
@@ -1,13 +1,7 @@
 ---
-import type {
-  ParseErrorTest,
-  SuccessTest,
-} from "@handlebars-ng/specification/tests";
-import prettier from "prettier";
+import type { ParseErrorTest } from "@handlebars-ng/specification";
 
 import { Code } from "astro/components";
-import Tabs from "./Tabs.astro";
-import Ast from "./Ast.astro";
 
 interface Props {
   spec: ParseErrorTest;
