enable playground, add ast view

--- a/packages/handlebars-ng.knappi.org/src/pages/index.astro
+++ b/packages/handlebars-ng.knappi.org/src/pages/index.astro
@@ -27,17 +27,13 @@ import { featPlayground } from "../featureToggles";
       easy in the future.
     </Card>
   </CardContainer>
-  {
-    featPlayground && (
-      <div class="flex align-center justify-center">
-        <a
-          class="font-bold shadow-lg shadow-orange-400/40 border border-orange-400 p-2 w-64 inline-block text-center rounded-2xl"
-          href="playground/"
-        >
-          Try it!
-        </a>
-      </div>
-    )
-  }
+  <div class="flex align-center justify-center">
+    <a
+      class="font-bold border-2 border-orange-400 p-2 inline-block text-center rounded-lg w-1/3"
+      href="playground/"
+    >
+      Try it out!
+    </a>
+  </div>
   <div class="h-30 flex"></div>
 </Home>
