--- a/packages/handlebars-ng.knappi.org/src/layouts/default/DefaultLayout.astro
+++ b/packages/handlebars-ng.knappi.org/src/layouts/default/DefaultLayout.astro
@@ -25,33 +25,36 @@ const sidebarEnabled = Astro.slots.has("sidebar");
     <slot name="additionalHead" />
     <title>{title}</title>
   </head>
-  <body>
-    <div class="min-h-screen relative bg-white pb-16">
+  <body class="bg-orange-200">
+    <div
+      class="min-h-screen relative max-w-7xl w-full mx-auto pb-16 lg:shadow-lg bg-white"
+    >
       <header class="border-b bg-orange-50">
-        <div class="max-w-7xl mx-auto w-full px-4 py-4 lg:pr-8">
+        <div class="mx-auto w-full px-4 py-4 lg:pr-8">
           <Navbar sidebarEnabled={sidebarEnabled} section={section} />
         </div>
       </header>
-      <div class="max-w-7xl mx-auto relative pb-16 flex-1">
+      <div class="flex">
         {
           sidebarEnabled && (
-            <aside class="absolute w-0 lg:w-64 overflow-visible h-full z-50">
+            <aside class="w-0 lg:w-64 overflow-visible z-50">
               <Sidebar client:load>
                 <slot name="sidebar" />
               </Sidebar>
             </aside>
           )
         }
-        <main class="content lg:ml-64 p-4 lg:px-8 min-h-full">
+        <!-- min-w-0 is required to prevent code blocks from overflowing
+         https://weblog.west-wind.com/posts/2016/feb/15/flexbox-containers-pre-tags-and-managing-overflow
+        -->
+        <main class="content p-4 lg:px-8 min-h-full z-40 flex-1 min-w-0">
           <slot />
         </main>
       </div>
       <footer
         class="border-t border-slate-300 bg-slate-100 text-orange-900 flex-shrink-0 flex-grow-0 w-full bottom-0 absolute"
       >
-        <div
-          class="max-w-5xl mx-auto w-full px-4 lg:px-8 flex items-center justify-start h-12"
-        >
+        <div class="w-full px-4 lg:px-8 flex items-center justify-start h-12">
           <Footer />
         </div>
       </footer>
@@ -132,6 +135,10 @@ const sidebarEnabled = Astro.slots.has("sidebar");
 
   .content .astro-code {
     @apply p-1 my-4;
+  }
+
+  .content .astro-code pre {
+    max-width: 100%;
   }
 
   /* Inspired by https://sylvaindurand.org/using-css-to-add-line-numbering/ */
