--- a/packages/handlebars-ng.knappi.org/src/components/sidebar/SidebarContents.astro
+++ b/packages/handlebars-ng.knappi.org/src/components/sidebar/SidebarContents.astro
@@ -11,4 +11,5 @@ const path = Astro.url.pathname;
   <TocHeader href="/helper-definitions/" text="Helper definitions" />
 
   <TocHeader href="/benchmarks/" text="Benchmarks" />
+  <TocHeader href="/playground/" text="Playground" />
 </div>
